# People-Counting-in-Real-Time

./: people_counter.py  pyproject.toml  requirements.txt  run.bat
utils/: config.json
utils/data/logs/: counting_data.csv
